2000-08-01  Adam Fedor  <fedor@gnu.org>

	* Source/NSConcreteNumber.m (-compare:): Add return at end to quiet
	compiler warning.

	* Source/NSFileHandle.m: Change +fileHandle... methods to use
	abstracts class's allocWithZone.

	* Source/libgnustep-base.def: Update for new/removed classes.

2000-08-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Correct order of args to
	lastDayOfGregorianMonth()
	* Source/NSPortCoder.m: Handle classes encoded as objects specially.
	* Source/NSArchiver.m: ditto.
	* Source/NNSUnarchiver.m: ditto.

2000-07-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Foundation/NSDebug.h: removed GS_IMPORT
	* Source/Foundation/NSObjCRuntime.h: ditto
	* Source/Foundation/GSConfig.h.in: ditto

2000-07-31  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: implement -cStringLength correctly in terms of
	other methods of the abstract class, rather than making the subclass
	do it.  Cache [-characterAtIndex:] implementation for speed
	throughout.
	* Source/Unicode.m: Remove uslen() function - unused and unsafe.
	Tidied code and optimised a little.
	* Source/Foundation/Unicode.h: Remove uslen()
	* Source/NSNumber.m: Check for nul argument to [-compare:]
	* Source/NSDate.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSConcreteNumber.m: ditto
	* Source/NSTimer.m: ditto

2000-07-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/nconnection.m: Trivial test of basic inter-thread use of
	DO taken from example code in Applde documentation.

2000-07-29  Richard Frith-Macdonald <rfm@gnu.org>

	Varous cluster classes - Bugfix to let allocWithZone work for
	new concrete subclasses in the cluster.
	* Source/NSPortCoder.m: Accept classes when asked to decode object.
	* Source/NSUnarchiver.m: ditto.

2000-07-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Don't create/use locks until the app
	goes multi-threaded.
	* Source/GSTcpPort.m: ditto.

2000-07-27  Richard Frith-Macdonald <rfm@gnu.org>
